--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Personal Portfolio</title>
   </head>
   <body>
+
     <header>
-      <nav></nav>
+      <div class="container">
+        <a href="#">Portfolio.</a>
+        
+        <nav>
+          <a href="#" class="active">Home</a>
+          <a href="#">About</a>
+          <a href="#">Skills</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
+        </nav>
+      </div>
     </header>
 
     <main>
