--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <a href="#">Portfolio.</a>
         
         <nav>
-          <a href="#" class="active">Home</a>
-          <a href="#">About</a>
-          <a href="#">Skills</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Contact</a>
+          <a href="#" style="--i:1;" class="active">Home</a>
+          <a href="#" style="--i:2;">About</a>
+          <a href="#" style="--i:3;">Skills</a>
+          <a href="#" style="--i:4;">Portfolio</a>
+          <a href="#" style="--i:5;">Contact</a>
         </nav>
       </section>
     </header>
@@ -34,10 +34,10 @@
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non ducimus velit error magnam sed molestias, exercitationem vero quisquam alias quo?</p>
           
           <div class="social-icons">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-facebook'></i></a>
-            <a href="#"><i class='bx bxl-instagram'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#" style="--i:9"><i class='bx bxl-linkedin'></i></a>
+            <a href="#" style="--i:8"><i class='bx bxl-facebook'></i></a>
+            <a href="#" style="--i:7"><i class='bx bxl-instagram'></i></a>
+            <a href="#" style="--i:6"><i class='bx bxl-twitter'></i></a>
           </div>
 
           <a href="#">Download CV</a>
