--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <header>
       <section class="container">
         <a href="#">Portfolio.</a>
+
+        <i class='bx bx-menu menu-icon'></i>
         
         <nav>
           <a href="#" style="--i:1;" class="active">Home</a>
@@ -40,7 +42,7 @@
             <a href="#" style="--i:6"><i class='bx bxl-twitter'></i></a>
           </div>
 
-          <a href="#">Download CV</a>
+          <a href="#" class="btn-cv">Download CV</a>
         </div>
 
         <div class="hero-img">
