--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </section>
 
-    <section class="about" id="about">
+    <section id="about">
       <div class="container">
         
         <div class="about-img">
@@ -68,6 +68,10 @@
         </div>
 
       </div>
+    </section>
+
+    <section >
+
     </section>
 
     <script type="module" src="/src/main.ts"></script>
