--- a/index.html
+++ b/index.html
@@ -104,6 +104,68 @@
       </div>
     </section>
 
+    <section id="portfolio">
+      <div class="container">
+        <h2 class="heading">Latest <span>Project</span></h2>
+
+        <div class="portfolio-container">
+          <div class="box">
+            <img src="./src/assets/port1.jpg" alt="">
+            <div class="layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, ipsa.</p>
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./src/assets/port2.jpg" alt="">
+            <div class="layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, ipsa.</p>
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./src/assets/port3.jpg" alt="">
+            <div class="layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, ipsa.</p>
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./src/assets/port4.jpg" alt="">
+            <div class="layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, ipsa.</p>
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./src/assets/port5.jpg" alt="">
+            <div class="layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, ipsa.</p>
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./src/assets/port6.jpg" alt="">
+            <div class="layer">
+              <h4>Web Design</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, ipsa.</p>
+              <a href=""><i class="bx bx-link-external"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
