--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <a href="#" class="navigation" data-target="hero" style="--i:1;" class="active">Home</a>
           <a href="#" class="navigation" data-target="about" style="--i:2;">About</a>
           <a href="#" class="navigation" data-target="services" style="--i:3;">Services</a>
-          <a href="#" style="--i:4;">Portfolio</a>
-          <a href="#" style="--i:5;">Contact</a>
+          <a href="#" class="navigation" data-target="portfolio" style="--i:4;">Portfolio</a>
+          <a href="#" class="navigation" data-target="contact" style="--i:5;">Contact</a>
         </nav>
       </div>
     </header>
@@ -163,6 +163,41 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <h2 class="heading">Contact <span>Me</span></h2>
+        <form action="#">
+          <div class="box">
+            <input type="text" placeholder=" ">
+            <label for="">Name</label>
+          </div>
+
+          <div class="box">
+            <input type="text" placeholder=" ">
+            <label for="">Email</label>
+          </div>
+
+          <div class="box">
+            <input type="text" placeholder=" ">
+            <label for="">Phone</label>
+          </div>
+
+          <div class="box">
+            <input type="text" placeholder=" ">
+            <label for="">Subject</label>
+          </div>
+
+          <div class="text-box">
+            <textarea placeholder=" "></textarea>
+            <label for="">Message</label>
+          </div>
+
+          <button type="submit">Send</button>
+
+        </form>
       </div>
     </section>
 
