--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <i class='bx bx-menu menu-icon'></i>
         
         <nav>
-          <a href="#" class="navigation" data-target="hero" style="--i:1;" class="active">Home</a>
+          <a href="#" class="navigation active" data-target="hero" style="--i:1;">Home</a>
           <a href="#" class="navigation" data-target="about" style="--i:2;">About</a>
           <a href="#" class="navigation" data-target="services" style="--i:3;">Services</a>
           <a href="#" class="navigation" data-target="portfolio" style="--i:4;">Portfolio</a>
@@ -195,7 +195,7 @@
             <label for="">Message</label>
           </div>
 
-          <button type="submit">Send</button>
+          <button type="submit" class="btn">Send Message</button>
 
         </form>
       </div>
